pkg/lang/testdata/ub/configurations/invalid/duplicate-alias.ub
configurations: {
  aws: { default: { region: 'a' } }
  aws: { default: { region: 'b' } }
}
